force-app/main/default/objects/Payment__c/fields/Crypto_Asset__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Asset__c</fullName>
    <label>Crypto Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>USDT_ERC</fullName>
            </value>
            <value>
                <fullName>USDT_TRC</fullName>
            </value>
            <value>
                <fullName>ETH</fullName>
            </value>
            <value>
                <fullName>XRP</fullName>
            </value>
            <value>
                <fullName>USDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>