force-app/main/default/objects/Payment__c/fields/Date_Receivd__c.field-meta.xml
<CustomField>
    <fullName>Date_Receivd__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>