force-app/main/default/objects/Payment__c/fields/isEmailSent__c.field-meta.xml
<CustomField>
    <fullName>isEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEmailSent</label>
    <type>Checkbox</type>
</CustomField>