force-app/main/default/objects/Payment__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <formula>Trade__r.Trade_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Type</label>
    <type>Text</type>
</CustomField>